# MyRPG

./: pyproject.toml  setup.py
my_rpg/: event.py  monster.py  player.py
