[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_rpg"
version = "0.1.1"
description = "A custom RPG job system"
authors = [
    { name="EricWu", email="ericwu.jf15@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

[tool.setuptools]
packages = ["my_rpg"]
